feat: initialize backend structure with JWT utilities, security configuration, repositories, and model entities